# career-conversation-AI-agent-chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
chatbot/: README.md  app.py  requirements.txt
chatbot/my-profile/: summary.txt
